# imbalance-classifier

./: .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  imbalance.yaml
scripts/: predict.py  train.py
src/mlc/: __init__.py  calibration.py  config.py  cost.py  data.py  features.py  infer.py  logging.py  metrics.py  models.py  persistence.py  plots.py  trainer.py  validation.py
tests/: test_cost_calib.py  test_features.py  test_model.py
